[package]
name = "sigillum"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
sha3 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tera = "1.19"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
tower-http = { version = "0.5", features = ["fs"] }